[project]
name = "NUSGet-Web-Backend"
version = "1.0.0"
authors = [
    { name="NinjaCheetah", email="ninjacheetah@ncxprogramming.com" },
]
description = "A simple libWiiPy-based backend server for the NUSGet Web client"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pycryptodome",
    "requests"
]
keywords = ["Wii", "wii"]

[project.urls]
Homepage = "https://github.com/NinjaCheetah/NUSGet-Web-Backend"
Repository = "https://github.com/NinjaCheetah/NUSGet-Web-Backend.git"
Issues = "https://github.com/NinjaCheetah/NUSGet-Web-Backend/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
